--- a/frontend/medical-booking/app/globals.css
+++ b/frontend/medical-booking/app/globals.css
@@ -1,6 +1,36 @@
+
+
+/*.datapicker-enabled-days.day-unit {
+    background-color: green !important;
+    }*/
+
+.datapicker-enabled-days
+.ant-picker-cell-in-view.ant-picker-cell-in-view   
+.ant-picker-cell-inner {
+    background-color: #27c456 !important;
+}
+
+
+/*.datapicker-enabled-days
+.ant-picker-cell-inner {
+    border-color: green !important;                  
+}*/
+
+
+/* #1f9643e5      .ant-picker-cell-in-view*/
+
+
+
+
+
+
+
+
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
